server-config/dmz/iptables-rules.v4
# Generated by iptables-save v1.6.0 on Thu Mar 16 00:12:47 2017
# Modified
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
# INPUT chain rules

# ACCEPT traffic on already established connections or related to already accepted connections
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

# ACCEPT all on localhost
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

# ACCEPT DNS
-A INPUT -p tcp --dport 53 -j ACCEPT
-A INPUT -p udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp --dport 53 -j ACCEPT
-A OUTPUT -p udp --dport 53 -j ACCEPT

# ACCEPT SSH on all ports
-A INPUT -p tcp --dport 22 -j ACCEPT
-A OUTPUT -p tcp --dport 22 -j ACCEPT
#-A OUTPUT -p tcp --sport 22 -j ACCEPT

# ACCEPT HTTP
-A INPUT -p tcp --dport 80 -j ACCEPT
-A OUTPUT -p tcp --dport 80 -j ACCEPT
#-A OUTPUT -p tcp --sport 80 -j ACCEPT

# ACCEPT HTTPS. This is also required for Secure gateway
-A INPUT -p tcp --dport 443 -j ACCEPT
-A OUTPUT -p tcp --dport 443 -j ACCEPT
#-A OUTPUT -p tcp --sport 443 -j ACCEPT

# Secure Gateway dashboard default port
-A INPUT -i enp0s8 -p tcp --dport 9003 -j ACCEPT
-A OUTPUT -o enp0s8  -p tcp --sport 9003 -j ACCEPT

# Allow connections to Secure Gateway on port 9000
-A INPUT -p tcp --dport 9000 -j ACCEPT
-A OUTPUT -p tcp --dport 9000 -j ACCEPT

COMMIT
# Completed on Thu Mar 16 00:12:47 2017
